Flèches de navigation de la page "Category" du Wiki : amélioration du rendu sur mobile et tablette.

--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -125,17 +125,19 @@ $background-color_1: black;
 		width: calc(100% - 4px);
 	}
 	.arrow-section {
-		bottom: 34%;
+		bottom: 50%;
+		display: block;
 	}
 	.prev-arrow-section, .next-arrow-section {
-		width: 60px;
-		height: 60px;
+		width: 50px;
+		height: 50px;
+		position: absolute;
 	}
 	.prev-arrow-section {
-		right: 84%;
+		margin-right: 10px;
 	}
 	.next-arrow-section {
-		left: 84%;
+		margin-left: 10px;
 	}
 }
 /* Ici : media queries pour la troisième partie tablette */
