--- a/star-wars-blog/src/components/CommentCard/CommentCard.scss
+++ b/star-wars-blog/src/components/CommentCard/CommentCard.scss
@@ -1,4 +1,5 @@
 $color_1: white;
+$color_2: #b4b4b4;
 $font-family_1: Arial, Helvetica, sans-serif;
 $background-color_1: black;
 
@@ -9,11 +10,14 @@ $background-color_1: black;
 	justify-content: flex-end;
 	margin-left: auto;
 	margin-right: auto;
+	position: relative;
 	.comment-card-wrapper-arrow {
-		margin-top: 20px;
+		position: absolute;
+		right: calc(80% + 25px);
+		margin-top: 13px;
 		color: $color_1;
-		font-size: 26px;
-		padding-right: 10px;
+		font-size: 35px;
+		padding-right: 8px;
 		cursor: default;
 	}
 	.comment-card-body {
@@ -25,9 +29,103 @@ $background-color_1: black;
 		height: fit-content;
 		width: 80%;
 		border: 1px solid white;
-		border-radius: 3px;
+		border-radius: 5px;
 		border-top-right-radius: 0;
 		border-bottom-right-radius: 0;
+		.comment-card-main {
+			font-family: $font-family_1;
+			font-size: 9px;
+			text-align: justify;
+			color: $color_1;
+			line-height: 13px;
+			display: flex;
+			margin: 0;
+			padding: 0;
+			padding-right: 20px;
+			position: relative;
+			.comment-card-delete-cross {
+				position: absolute;
+				right: 0;
+				top: 5px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				height: 10px;
+				width: 10px;
+				cursor: pointer;
+			}
+			.comment-card-author {
+				margin: 0;
+				cursor: default;
+				margin-top: 5px;
+				min-width: 70px;
+				padding-right: 5px;
+				padding-left: 8px;
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-start;
+				align-items: flex-start;
+				.comment-card-author-profile-image {
+					border-radius: 50%;
+					border: 1px solid $color_1;
+					overflow: hidden;
+					width: 32px;
+					height: 32px;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					img {
+						width: 100%;
+						height: 100%;
+					}
+				}
+				.comment-card-author-name {
+					margin: 2px;
+					margin-top: 5px;
+					text-align: left;
+					line-height: 10px;
+				}
+			}
+			.comment-card-content {
+				margin-bottom: 0;
+				margin-left: 1%;
+				line-height: 10px;
+				height: fit-content;
+				min-height: 50px;
+				max-width: 638px;
+				margin-top: 5px;
+				padding-top: 0;
+				padding-bottom: 0;
+				width: 100%;
+				.comment-card-content-front {
+					// margin-top: 2px;
+					margin-bottom: 5px;
+					cursor: default;
+					width: 100%;
+					display: flex;
+					justify-content: space-between;
+				}
+				.comment-card-content-text {
+					max-width: 638px;
+					overflow-wrap: break-word;
+				}
+				.comment-card-modify-message {
+					width: 100%;
+					height: auto;
+					textarea {
+						width: 100%;
+						min-height: 50px;
+						background-color: $background-color_1;
+						padding: 0;
+						margin: 0;
+						color: $color_1;
+						font-size: 9px;
+						font-family: $font-family_1;
+						outline: none;
+					}
+				}
+			}
+		}
 		.comment-card-footer {
 			font-family: $font-family_1;
 			margin: 0;
@@ -38,81 +136,20 @@ $background-color_1: black;
 			justify-content: flex-end;
 			align-items: center;
 			.comment-card-footer-link {
+				text-decoration: none;
 				margin: 0;
 				padding: 0;
 				margin-right: 40px;
-				color: $color_1;
 				font-size: 9px;
+			}
+			.loggedColor {
+				color: $color_1;
 				cursor: pointer;
 			}
-		}
-	}
-}
-.comment-card-main {
-	font-family: $font-family_1;
-	font-size: 9px;
-	text-align: justify;
-	color: $color_1;
-	line-height: 13px;
-	display: flex;
-	margin: 0;
-	padding: 0;
-	padding-right: 20px;
-	position: relative;
-	.comment-card-delete-cross {
-		position: absolute;
-		right: 0;
-		top: 5px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		height: 10px;
-		width: 10px;
-		cursor: pointer;
-	}
-	.comment-card-author {
-		margin: 0;
-		cursor: default;
-		margin-top: 5px;
-		width: 25%;
-		padding-right: 5px;
-		padding-left: 8px;
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		align-items: flex-start;
-		.comment-card-author-profile-image {
-			width: 35px;
-			height: 35px;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			img {
-				width: 100%;
-				height: 100%;
+			.unloggedColor {
+				color: $color_2;
+				cursor: default;
 			}
-		}
-		.comment-card-author-name {
-			margin: 2px;
-			text-align: left;
-			line-height: 10px;
-		}
-	}
-	.comment-card-content {
-		margin-bottom: 0;
-		margin-left: 1%;
-		line-height: 10px;
-		height: fit-content;
-		margin-top: 5px;
-		padding-top: 0;
-		padding-bottom: 0;
-		.comment-card-content-front {
-			margin-top: 2px;
-			margin-bottom: 5px;
-			cursor: default;
-			width: 100%;
-			display: flex;
-			justify-content: space-between;
 		}
 	}
 }
