--- a/star-wars-blog/src/components/PostCard/PostCard.scss
+++ b/star-wars-blog/src/components/PostCard/PostCard.scss
@@ -3,15 +3,107 @@ $color_2: #b4b4b4;
 $font-family_1: Arial, Helvetica, sans-serif;
 $background-color_1: black;
 
+
+.post-card-main-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 15px;
+	.post-card-comments-section {
+		gap: 3px;
+		margin-top: 3px;
+		margin-bottom: 3px;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+	}
+	.new-comment-form-section {
+		margin-right: 21px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		height: fit-content;
+		width: 80%;
+		.new-comment-form {
+			outline: 1px solid $color_1;
+			width: 80%;
+			max-width: 748px;
+			min-height: 70px;
+			padding: 0;
+			margin: 0;
+			background-color: $background-color_1;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			.comment-citation-div {
+				display: flex;
+				flex-direction: column;
+				position: relative;
+				color: $color_1;
+				width: 100%;
+				height: fit-content;
+				font-size: 16px;
+				font-family: Arial, Helvetica, sans-serif;
+				.comment-citation-cancel {
+					position: absolute;
+					width: 100%;
+					right: 15px;
+					margin-top: 5px;
+					width: 10px;
+					height: 10px;
+					font-size: 10px;
+					cursor: pointer;
+				}
+				.comment-citation-content {
+					overflow-wrap: break-word;
+					margin-bottom: 0;
+					margin-top: 10px;
+					margin-left: 10px;
+					padding: 0;
+					width: 95%;
+					min-height: 40px;
+					color: $color_1;
+					font-size: 9px;
+					background-color: $background-color_1;
+					width: 90%;
+					height: auto;
+				}
+			}
+			.new-comment-form-textarea {
+				width: 95%;
+				min-height: 40px;
+				height: auto;
+				margin-top: 10px;
+				margin-bottom: 10px;
+				padding: 8px;
+				border: none;
+				outline: 1px solid rgba(255, 255, 255, .6);
+				color: $color_1;
+				font-size: 9px;
+				line-height: 13px;
+				background-color: $background-color_1;
+			}
+			.new-comment-form-textarea::placeholder {
+				color: $color_1;
+				opacity: .6;
+			}
+		}
+	}
+}
 .post-card-main {
 	position: relative;
 	width: 80%;
-	outline: 2px solid white;
+	outline: 2px solid $color_1;
 	border-radius: 10px;
+	border-bottom-right-radius: 0;
 	font-family: $font-family_1;
 	background: url('../../assets/images/dashboard.webp') no-repeat center center;
 	background-size: cover;
 	overflow: hidden;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 .post-card-overlay {
 	position: absolute;
@@ -41,6 +133,9 @@ $background-color_1: black;
 		cursor: pointer;
 	}
 }
+.info-index {
+	cursor: default;
+}
 .infos-datetime {
 	position: absolute;
 	right: 80px;
@@ -52,6 +147,7 @@ $background-color_1: black;
 	position: relative;
 	h2 { 
 		font-size: 16px;
+		cursor: default;
 	}
 }
 .post-card-author-wrapper {
@@ -64,6 +160,7 @@ $background-color_1: black;
 	margin-right: 60px;
 	margin-left: 60px;
 	p { 
+		text-align: justify;
 		height: fit-content;
 		width: auto;
 		font-size: 14px;
@@ -112,7 +209,7 @@ $background-color_1: black;
 	width: 60px;
 	height: 60px;
 	border-radius: 50%;
-	outline: 1px solid white;
+	outline: 1px solid $color_1;
 	display: flex;
 	justify-content: center;
 	align-items: center;
