--- a/star-wars-blog/src/pages/TestPage/TestPage.scss
+++ b/star-wars-blog/src/pages/TestPage/TestPage.scss
@@ -1,6 +1,8 @@
 $font-family_1: Arial, Helvetica, sans-serif;
 $color_1: rgb(53, 155, 155);
-$background-color_1: white;
+$color_2: lightcyan;
+$background-color_1: black;
+$background-color_2: rgb(53, 155, 155);
 
 .test-app {
     padding-left: 5%;
@@ -9,8 +11,8 @@ $background-color_1: white;
     padding-bottom: 50px;
 	font-family: $font-family_1;
 	min-height: 100vh;
-	width: calc(70% - 2px);
-	border: 1px solid $color_1;
+	width: calc(70% - 4px);
+	border: 1px solid $color_2;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: $background-color_1;
