Gestion de la div "topics-list-empty-message" dans le fichier de styles SCSS "Topics.scss".

--- a/star-wars-blog/src/pages/Topics/Topics.scss
+++ b/star-wars-blog/src/pages/Topics/Topics.scss
@@ -59,6 +59,10 @@ $background-color_2: black;
 	flex-direction: column;
 	align-items: center;
 	gap: 10px;
+	.topics-list-empty-message {
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 28px;
+	}
 }
 .topic-creation-form {
 	margin-top: 50px;
