Conception du système de mention sur les utilisateurs du site.

--- a/star-wars-blog/src/pages/TestPage/TestPage.scss
+++ b/star-wars-blog/src/pages/TestPage/TestPage.scss
@@ -1,7 +1,7 @@
 $font-family_1: Arial, Helvetica, sans-serif;
 $color_1: rgb(53, 155, 155);
 $color_2: lightcyan;
-$background-color_1: black;
+$background-color_1: white;
 $background-color_2: rgb(53, 155, 155);
 
 .test-app {
