Modification de la largeur des composants pour une taille fixe tout en respectant un design responsive.

--- a/star-wars-blog/src/components/PostCard/PostCard.scss
+++ b/star-wars-blog/src/components/PostCard/PostCard.scss
@@ -9,6 +9,7 @@ $background-color_1: black;
 	flex-direction: column;
 	align-items: center;
 	margin-bottom: 15px;
+	width: 100%;
 	.post-card-comments-section {
 		gap: 3px;
 		margin-top: 3px;
