--- a/star-wars-blog/src/pages/Topic/Topic.scss
+++ b/star-wars-blog/src/pages/Topic/Topic.scss
@@ -127,20 +127,27 @@ $background-color_3: rgba(255, 255, 255, .8);
 	width: 90%;
 	height: 150px;
     border-radius: 10px;
-    background-color: $background-color_3;
+	background-color: $background-color_3;
+	padding-top: 5px;
+	padding-bottom: 5px;
     padding-left: 15px;
     padding-right: 15px;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+	&:focus {
+		outline: 4px solid $color_2;
+		border: none;
+	}
 }
 .creation-post-textarea-description::placeholder {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
 }
-.creation-post-textarea-description:focus {
-    border: 4px solid $color_2;
-    outline: none;
+.creation-post-textarea-description__input:focus {
+    outline: 4px solid $color_2;
+}
+.creation-post-textarea-description:focus-visible {
+	outline: 4px solid $color_2;
 }
 .creation-post-form-submit {
 	background-color: $background-color_3;
@@ -158,8 +165,8 @@ $background-color_3: rgba(255, 255, 255, .8);
 }
 
 
-
-/* .topic {
+/*
+.topic {
     background: url(../assets/images/star-wars-dialog.webp) no-repeat center center fixed;
     background-size: cover;
     position: relative;
@@ -236,4 +243,5 @@ $background-color_3: rgba(255, 255, 255, .8);
     display: flex;
     flex-direction: column;
     align-items: center;
-} */
+}
+*/
