Modification de la couleur de fond de la bulle d'affichage des photos de profil des utilisateurs losqu'on est sur des utilisateurs sans photo de profil ou dans le cas d'utilisateurs inconnus.

--- a/star-wars-blog/src/components/CommentCard/CommentCard.scss
+++ b/star-wars-blog/src/components/CommentCard/CommentCard.scss
@@ -66,6 +66,7 @@ $background-color_1: black;
 				justify-content: flex-start;
 				align-items: flex-start;
 				.comment-card-author-profile-image {
+					background-color: #352a4a;
 					border-radius: 50%;
 					border: 1px solid $color_1;
 					overflow: hidden;
