--- a/star-wars-blog/src/components/PostCard/PostCard.scss
+++ b/star-wars-blog/src/components/PostCard/PostCard.scss
@@ -207,6 +207,7 @@ $background-color_1: black;
 	}
 }
 .post-card-author-div {
+	background-color: #352a4a;
 	width: 60px;
 	height: 60px;
 	border-radius: 50%;
