--- a/star-wars-blog/src/components/PostCard/PostCard.scss
+++ b/star-wars-blog/src/components/PostCard/PostCard.scss
@@ -25,72 +25,7 @@ $background-color_1: black;
 		flex-direction: column;
 		align-items: flex-end;
 		height: fit-content;
-		width: 80%;
-		.new-comment-form {
-			outline: 1px solid $color_1;
-			width: 80%;
-			max-width: 748px;
-			min-height: 70px;
-			padding: 0;
-			margin: 0;
-			background-color: $background-color_1;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			.comment-citation-div {
-				display: flex;
-				flex-direction: column;
-				position: relative;
-				color: $color_1;
-				width: 100%;
-				height: fit-content;
-				font-size: 16px;
-				font-family: Arial, Helvetica, sans-serif;
-				.comment-citation-cancel {
-					position: absolute;
-					width: 100%;
-					right: 15px;
-					margin-top: 5px;
-					width: 10px;
-					height: 10px;
-					font-size: 10px;
-					cursor: pointer;
-				}
-				.comment-citation-content {
-					overflow-wrap: break-word;
-					margin-bottom: 0;
-					margin-top: 10px;
-					margin-left: 10px;
-					padding: 0;
-					width: 95%;
-					min-height: 40px;
-					color: $color_1;
-					font-size: 9px;
-					background-color: $background-color_1;
-					width: 90%;
-					height: auto;
-				}
-			}
-			.new-comment-form-textarea {
-				width: 95%;
-				min-height: 40px;
-				height: auto;
-				margin-top: 10px;
-				margin-bottom: 10px;
-				padding: 8px;
-				border: none;
-				outline: 1px solid rgba(255, 255, 255, .6);
-				color: $color_1;
-				font-size: 9px;
-				line-height: 13px;
-				background-color: $background-color_1;
-			}
-			.new-comment-form-textarea::placeholder {
-				color: $color_1;
-				opacity: .6;
-			}
-		}
+		width: calc(80% - 1px);
 	}
 }
 .post-card-main {
@@ -155,32 +90,36 @@ $background-color_1: black;
 	display: flex;
 	flex-direction: column;
 	min-width: 100px;
+	h2 {
+		max-width: 80px;
+		word-wrap: break-word;
+	}
 }
 .post-card-message {
 	width: 100%;
 	margin-right: 60px;
 	margin-left: 60px;
+	overflow: hidden;
 	p { 
-		text-align: justify;
-		height: fit-content;
-		width: auto;
-		font-size: 14px;
+		white-space: wrap;
 		overflow: hidden;
+  		text-overflow: ellipsis;
+		height: fit-content;
+		font-size: 14px;
 	}
 	.post-card-modify-message {
 		width: 100%;
-		min-height: fit-content;
 		height: 100%;
 		textarea {
 			background-color: $background-color_1;
 			font-size: 14px;
 			font-family: $font-family_1;
 			color: $color_1;
-			width: 100%;
-			height: 100%;
+			width: 95%;
+			height: auto;
+			min-height: 100px;
 			margin: 0;
 			padding: 10px;
-			border: none;
 			outline: 1px solid $color_1;
 		}
 	}
@@ -219,6 +158,108 @@ $background-color_1: black;
 	img { 
 		height: 100%;
 		width: auto;
+	}
+}
+/* Ici : media queries pour la seconde partie desktop */
+@media screen and (max-width: 1380px) {
+	.post-card-main {
+		width: 90%;
+	}
+	.post-card-message {
+		margin-left: 0;
+		p {
+			width: 100%;
+			font-size: 13px;
+		}
+	}
+	.post-card-author-div {
+		width: 40px;
+		height: 40px;
+	}
+	.post-card-author-wrapper {
+		h2 {
+			font-size: 14px;
+			margin-left: 0;
+		}
+	}
+	.post-card-content {
+		display: flex;
+		flex-direction: column;
+	}
+	.post-card-infos {
+		font-size: 14px;
+		min-height: 20px;
+		padding-bottom: 0;
+		.delete-post-cross {
+			position: absolute;
+			right: 10px;
+			top: 6px;
+		}
+	}
+	.post-card-modify-message {
+		width: 100%;
+		textarea {
+			width: 95% !important;
+			height: auto !important;
+			min-height: 100px !important;
+			font-size: 13px !important;
+			padding: 10px !important;
+		}
+	}
+}
+/* Ici : media queries pour la première partie tablette */
+@media screen and (max-width: 1023px) {
+	.post-card-main {
+		width: 95%;
+	}
+	.post-card-message {
+		flex-direction: column;
+		height: fit-content;
+		p {
+			font-size: 12px;
+		}
+	}
+	.post-card-modify-message {
+		width: 90% !important;
+		height: fit-content !important;
+		margin-top: 5px;
+		margin-bottom: 5px;
+		margin-left: 5px;
+		textarea {
+			line-height: 13px;
+			font-size: 12px !important;
+			height: fit-content !important;
+			padding: 5px !important;
+		}
+	}
+}
+/* Ici : media queries pour la première partie smartphone */
+@media screen and (max-width: 660px) {
+	.post-card-message {
+		p {
+			width: 95%;
+			font-size: 11px;
+		}
+	}
+	.post-card-author {
+		flex-direction: column;
+	}
+	.post-card-author-wrapper {
+		flex-direction: row;
+		h2 {
+			font-size: 12px;
+			margin-left: 20px;
+		}
+	}
+	.post-card-infos {
+		font-size: 12px;
+	}
+	.post-card-bottom-bar {
+		padding-top: 0;
+		height: 30px;
+		.post-card-link {
+			font-size: 12px;
+		}
 	}
 }
 
