--- a/star-wars-blog/src/components/CommentCard/CommentCard.scss
+++ b/star-wars-blog/src/components/CommentCard/CommentCard.scss
@@ -93,7 +93,8 @@ $background-color_1: black;
 				line-height: 10px;
 				height: fit-content;
 				min-height: 50px;
-				max-width: 638px;
+				// max-width: 638px;
+				max-width: 85%;
 				margin-top: 5px;
 				padding-top: 0;
 				padding-bottom: 0;
@@ -108,7 +109,9 @@ $background-color_1: black;
 				}
 				.comment-card-content-text {
 					max-width: 638px;
+					text-justify: none;
 					overflow-wrap: break-word;
+					// min-height: 50px;
 				}
 				.comment-card-modify-message {
 					width: 100%;
@@ -152,5 +155,123 @@ $background-color_1: black;
 				cursor: default;
 			}
 		}
+	}
+}
+/* Ici : media queries pour la seconde partie desktop */
+@media screen and (max-width: 1380px) {
+	.comment-card-content {
+		width: 84% !important;
+	}
+}
+/* Ici : media queries pour la première partie tablette */
+@media screen and (max-width: 1023px) {
+	.comment-card-content {
+		width: 82% !important;
+	}
+}
+/* Ici : media queries pour la seconde partie tablette */
+@media screen and (max-width: 991px) {
+	.new-comment-form-textarea {
+		width: calc(95% - 4px);
+		min-height: 50px !important;
+		margin-top: 1px !important;
+		margin-bottom: 1px !important;
+		padding: 5px !important;
+		font-size: 7px;
+		line-height: 9px;
+	}
+	.comment-card-content {
+		width: 80% !important;
+	}
+}
+/* Ici : media queries pour la première partie smartphone */
+@media screen and (max-width: 660px) {
+	.comment-card-wrapper {
+		width: 95%;
+	}
+	.comment-card-main {
+		flex-direction: column;
+	}
+	.comment-card-content-front {
+		display: none !important;
+	}
+	.comment-card-content-text {
+		margin-left: 7px;
+		margin-top: 5px;
+		margin-bottom: 0 !important;
+	}
+	.comment-card-main {
+		padding-right: 0 !important;
+	}
+	.comment-card-content {
+		min-height: 40px !important;
+		margin-top: 2px !important;
+		margin-left: 0 !important;
+		min-width: 100%;
+	}
+	.comment-card-author {
+		padding-right: 0;
+		flex-direction: row !important;
+		justify-content: baseline;
+		.comment-card-author-profile-image {
+			width: 22px !important;
+			height: 22px !important;
+			margin-right: 5px;
+		}
+	}
+	.comment-card-footer {
+		height: fit-content !important;
+		margin-top: 3px !important;
+		.comment-card-footer-link {
+			font-size: 9px;
+		}
+	}
+	.comment-card-modify-message {
+		width: 100%;
+		height: 100%;
+		margin-left: 7px !important;
+		margin-top: 0 !important;
+		margin-bottom: 0 !important;
+		textarea {
+			width: 100%;
+			height: auto;
+			font-size: 7px;
+		}
+	}
+
+
+
+
+
+	.post-card-message {
+		p {
+			width: 95%;
+			font-size: 11px;
+		}
+	}
+	.post-card-author {
+		flex-direction: column;
+	}
+	.post-card-author-wrapper {
+		flex-direction: row;
+		h2 {
+			font-size: 12px;
+			margin-left: 20px;
+		}
+	}
+	.post-card-infos {
+		font-size: 12px;
+	}
+	.post-card-bottom-bar {
+		padding-top: 0;
+		height: 30px;
+		.post-card-link {
+			font-size: 12px;
+		}
+	}
+	.new-comment-form-textarea {
+		width: calc(93% - 4px) !important;
+		margin-top: 0 !important;
+		margin-bottom: 0 !important;
 	}
 }
