--- a/star-wars-blog/src/pages/Topic/Topic.scss
+++ b/star-wars-blog/src/pages/Topic/Topic.scss
@@ -112,6 +112,7 @@ $background-color_3: rgba(255, 255, 255, .8);
     font-family: Arial, Helvetica, sans-serif;
 }
 .citation-content {
+	text-align: justify;
 	width: 90%;
 	max-width: 620px;
 	margin-left: auto;
@@ -162,6 +163,93 @@ $background-color_3: rgba(255, 255, 255, .8);
 	border: 4px solid lightskyblue;
 	outline: none;
 	background-color: lightskyblue;
+}
+/* Ici : media queries pour la seconde partie tablette */
+@media screen and (max-width: 991px) {
+	.topic {
+		width: calc(100% - 4px);
+	}
+	.topic-title {
+		margin-top: 60px;
+		width: 80%;
+		font-size: 22px;
+	}
+	.topic-arrow-link {
+		width: 60px;
+		height: 60px;
+		img {
+			width: 60px;
+			height: 60px;
+		}
+	}
+	.creation-post-form {
+		width: 92%;
+		margin-top: 15px;
+		margin-bottom: 40px;
+		gap: 10px;
+		padding-left: 3px;
+		padding-right: 3px;
+		padding-top: 5px;
+		padding-bottom: 10px;
+		border-radius: 10px;
+		.creation-post-form-title {
+			font-size: 16px;
+			margin-top: 10px;
+		}
+	}
+	.citation-content {
+		width: 90%;
+		max-width: 620px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.citation-cancel {
+		right: 12px;
+		margin-top: 5px;
+		font-size: 12px;
+	}
+	.creation-post-textarea-description {
+		width: 90%;
+		height: 120px;
+		padding-left: 10px;
+		padding-right: 10px;
+		font-size: 12px;
+		&:focus {
+			outline: 3px solid $color_2;
+		}
+	}
+	.creation-post-textarea-description::placeholder {
+		font-size: 12px;
+	}
+	.creation-post-textarea-description__input:focus {
+		outline: 3px solid $color_2;
+	}
+	.creation-post-textarea-description:focus-visible {
+		outline: 3px solid $color_2;
+	}
+	.creation-post-form-submit:hover {
+		border: 3px solid $color_2;
+	}
+	.creation-post-form-submit:active {
+		border: 3px solid lightskyblue;
+	}
+	.citation-div {
+		font-size: 12px;
+	}
+	.citation-content {
+		width: 84%;
+	}
+}
+/* Ici : media queries pour la première partie smartphone */
+@media screen and (max-width: 660px) {
+	.topic-arrow-link {
+		width: 40px;
+		height: 40px;
+		img {
+			width: 40px;
+			height: 40px;
+		}
+	}
 }
 
 
