--- a/star-wars-blog/src/sharedStyles/Account.scss
+++ b/star-wars-blog/src/sharedStyles/Account.scss
@@ -86,7 +86,7 @@ $background-color_6: transparent;
 }
 .account-user-detail {
 	display: flex;
-	align-items: center;
+	align-items: baseline;
 	gap: 10px;
 }
 .account-user-key {
