--- a/star-wars-blog/src/sharedStyles/Account.scss
+++ b/star-wars-blog/src/sharedStyles/Account.scss
@@ -128,6 +128,13 @@ $background-color_6: transparent;
 		align-items: center;
 	}
 }
+.any-followed-topic-text {
+	font-family: $font-family_1;
+	font-size: 24px;
+	cursor: default;
+	margin-top: 0;
+	margin-bottom: 0;
+}
 .account-form-update-section {
 	h2 {
 		font-size: 22px;
@@ -413,6 +420,9 @@ input[type='file'] {
 	}
 	.account-user-key, .account-user-value, .allow-mentions-notifs {
 		font-size: 16px !important;
+	}
+	.any-followed-topic-text {
+		font-size: 16px;
 	}
 	.account-form-update-section {
 		h2 {
