--- a/star-wars-blog/src/components/CommentForm/CommentForm.scss
+++ b/star-wars-blog/src/components/CommentForm/CommentForm.scss
@@ -2,6 +2,7 @@ $color_1: white;
 $background-color_1: black;
 
 .new-comment-form {
+    position: relative;
     outline: 1px solid $color_1;
     width: 80%;
     height: fit-content;
@@ -67,6 +68,26 @@ $background-color_1: black;
         opacity: .6;
     }
 }
+.comment-form-suggestions-list {
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    border: 1px solid #ccc;
+    background-color: $background-color_1;
+    z-index: 1000;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    min-width: 150px;
+    max-height: 109px;
+    overflow-y: auto;
+    color: $color_1;
+    font-size: 9px;
+    .comment-form-suggestion-item {
+        cursor: pointer;
+        padding: 5px 10px;
+        border-bottom: 1px solid #eee;
+    }
+}
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
 	.new-comment-form-textarea {
@@ -78,6 +99,16 @@ $background-color_1: black;
 		font-size: 7px;
 		line-height: 9px;
 	}
+    .comment-form-suggestions-list {
+        font-size: 7px;
+        max-height: 79px;
+        min-width: 100px;
+        .comment-form-suggestion-item {
+            cursor: pointer;
+            padding: 3px 6px;
+            border-bottom: 1px solid #eee;
+        }
+    }
 }
 /* Ici : media queries pour la première partie smartphone */
 @media screen and (max-width: 660px) {
