Correction de l'affichage de la photo de profil de l'auteur d'un commentaire.

--- a/star-wars-blog/src/components/CommentCard/CommentCard.scss
+++ b/star-wars-blog/src/components/CommentCard/CommentCard.scss
@@ -76,7 +76,7 @@ $background-color_1: black;
 					justify-content: center;
 					align-items: center;
 					img {
-						width: 100%;
+						width: auto;
 						height: 100%;
 					}
 				}
