--- a/star-wars-blog/src/pages/Topic/Topic.scss
+++ b/star-wars-blog/src/pages/Topic/Topic.scss
@@ -55,6 +55,56 @@ $background-color_3: rgba(255, 255, 255, .8);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	.topic-page-buttons {
+		position: relative;
+		display: flex;
+		align-items: center;
+		max-width: 600px;
+		min-width: 300px;
+		width: 40%;
+		height: 80px;
+		margin-bottom: 50px;
+		margin-top: 20px;
+		.topic-page-counter {
+			position: absolute;
+			left: calc(50% - 72px);
+			width: 140px;
+			height: 40px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			color: $color_1;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 20px;
+			font-weight: bold;
+			padding: 4px;
+			border: 2px solid $color_1;
+			border-radius: 10px;
+			cursor: default;
+		}
+		.topic-prev-button {
+			left: 0;
+		}
+		.topic-next-button {
+			right: 0;
+		}
+		.topic-prev-button, .topic-next-button {
+			position: absolute;
+			width: 70px;
+			height: 70px;
+			outline: 1px solid $color_1;
+			border-radius: 50%;
+			cursor: pointer;
+			overflow: hidden;
+				&:active {
+					outline: 4px solid white;
+				}
+			.topic-button-next-page, .topic-button-prev-page {
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}
 }
 .topic-title {
 	color: $color_1;
@@ -182,6 +232,17 @@ $background-color_3: rgba(255, 255, 255, .8);
 			height: 60px;
 		}
 	}
+	.topic-page-counter {
+		left: calc(50% - 62px) !important;
+		width: 120px !important;
+		height: 35px !important;
+		font-size: 16px !important;
+		padding: 3px !important;
+	}
+	.topic-prev-button, .topic-next-button {
+		width: 55px !important;
+		height: 55px !important;
+	}
 	.creation-post-form {
 		width: 92%;
 		margin-top: 15px;
@@ -249,5 +310,16 @@ $background-color_3: rgba(255, 255, 255, .8);
 			width: 40px;
 			height: 40px;
 		}
+	}
+	.topic-page-counter {
+		left: calc(50% - 52px) !important;
+		width: 100px !important;
+		height: 30px !important;
+		font-size: 12px !important;
+		padding: 2px !important;
+	}
+	.topic-prev-button, .topic-next-button {
+		width: 45px !important;
+		height: 45px !important;
 	}
 }
