--- a/star-wars-blog/src/sharedStyles/Account.scss
+++ b/star-wars-blog/src/sharedStyles/Account.scss
@@ -18,7 +18,8 @@ $background-color_6: transparent;
 	height: fit-content;
 	color: $color_1;
 	position: relative;
-	width: calc(80% - 4px);
+	// width: calc(80% - 4px);
+	width: calc(80% - 2px);
 	border: 1px solid $color_6 !important;
 }
 .account-overlay {
@@ -369,7 +370,8 @@ input[type='file'] {
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
 	.account-page {
-		width: calc(100% - 4px) !important;
+		// width: calc(100% - 4px) !important;
+		width: calc(100% - 2px) !important;
 	}
 }
 /* Ici : media queries pour la troisième partie tablette */
