--- a/star-wars-blog/src/components/Footer/Footer.scss
+++ b/star-wars-blog/src/components/Footer/Footer.scss
@@ -4,7 +4,8 @@ $background-color_1: black;
 $font-family_1: Arial, Helvetica, sans-serif;
 
 .footer {
-	width: calc(80% - 2px);
+	// width: calc(80% - 2px);
+	width: 80%;
 	height: fit-content;
 	margin-left: auto;
 	margin-right: auto;
@@ -16,7 +17,7 @@ $font-family_1: Arial, Helvetica, sans-serif;
 	overflow: hidden;
 }
 .footer-content {
-	width: 100%;
+	width: calc(90% - 2px);
 	min-height: 200px;
 	padding-left: 5%;
 	padding-right: 5%;
@@ -65,7 +66,8 @@ $font-family_1: Arial, Helvetica, sans-serif;
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
 	.footer {
-		width: calc(100% - 2px);
+		// width: calc(100% - 2px);
+		width: 100%;
 	}
 	.footer-content {
 		h2 { 
