--- a/star-wars-blog/src/pages/Error404/Error404.scss
+++ b/star-wars-blog/src/pages/Error404/Error404.scss
@@ -5,7 +5,8 @@ $color_2: white;
 	background: url(../../assets/images/error404.webp) no-repeat center center fixed;
 	background-size: cover;
 	position: relative;
-	width: calc(80% - 4px);
+	// width: calc(80% - 4px);
+	width: calc(80% - 2px);
 	border: 1px solid $color_2;
 }
 .error-overlay {
@@ -40,7 +41,8 @@ $color_2: white;
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
 	.error-page {
-		width: calc(100% - 4px);
+		// width: calc(100% - 4px);
+		width: calc(100% - 2px);
 	}
 	.error404-div {
 		h1 {
