--- a/star-wars-blog/src/pages/Legal/Legal.scss
+++ b/star-wars-blog/src/pages/Legal/Legal.scss
@@ -1,5 +1,6 @@
 $font-family_1: Arial, Helvetica, sans-serif;
 $color_1: rgb(53, 155, 155);
+$color_2: white;
 $background-color_1: white;
 
 .legal-page {
@@ -10,7 +11,8 @@ $background-color_1: white;
 	font-family: $font-family_1;
 	min-height: 100vh;
 	width: calc(70% - 2px);
-	border: 1px solid $color_1;
+	border-left: 1px solid $color_2;
+    border-right: 1px solid $color_2;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: $background-color_1;
