Mise en place du composant PencilImage.

--- a/star-wars-blog/src/components/CommentCard/CommentCard.scss
+++ b/star-wars-blog/src/components/CommentCard/CommentCard.scss
@@ -137,6 +137,8 @@ $background-color_1: black;
 			justify-content: flex-end;
 			align-items: center;
 			.comment-card-footer-link {
+				overflow: hidden;
+				display: flex;
 				text-decoration: none;
 				margin: 0;
 				padding: 0;
