--- a/star-wars-blog/src/components/PostCard/PostCard.scss
+++ b/star-wars-blog/src/components/PostCard/PostCard.scss
@@ -132,6 +132,8 @@ $background-color_1: black;
 	justify-content: flex-end;
 	align-items: center;
 	.post-card-link {
+		display: flex;
+		align-items: center;
 		z-index: 1;
 		text-decoration: none;
 		margin-right: 7%;
