--- a/star-wars-blog/src/components/SearchBar/SearchBar.scss
+++ b/star-wars-blog/src/components/SearchBar/SearchBar.scss
@@ -17,6 +17,7 @@ $background-color_2: black;
 }
 .search-form {
 	display: flex;
+	flex-direction: column;
 	width: 60%;
 	height: 100%;
 	padding-top: 120px;
@@ -28,6 +29,35 @@ $background-color_2: black;
 	background-color: $background-color_1;
 	overflow: hidden;
 	position: absolute;
+	.search-results {
+		position: relative;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: fit-content;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-color: $color_1;
+		.search-results-name {
+			width: 100%;
+			height: 45px;
+			padding: 0;
+			padding-left: 10px;
+			border: 1px solid gainsboro;
+			text-align: center;
+			color: $color_3;
+			font-weight: bold;
+			font-size: 18px;
+			border-radius: 6px;
+			background-color: $background-color_2;
+			&:hover {
+				background-color: $color_2;
+				color: $color_1;
+			}
+		}
+	}
 }
 .search-input {
 	z-index: 2;
