--- a/star-wars-blog/src/sharedStyles/Auth.scss
+++ b/star-wars-blog/src/sharedStyles/Auth.scss
@@ -114,10 +114,10 @@ button {
 	width: 100%;
 	height: 30px !important;
 	background-color: $background-color_1;
-	color: gray;
-	font-size: 15px !important;
-	font-weight: bolder;
-	font-family: $font-family_2 !important;
+	color: #757575;
+	font-size: 14px !important;
+	font-weight: bold;
+	font-family: $font-family_1 !important;
 	border-radius: 10px !important;
 	text-align: center;
 	&:active {
