Légères corrections sur le curseur en survol sur les textes de ces composants & pages.

--- a/star-wars-blog/src/pages/Legal/Legal.scss
+++ b/star-wars-blog/src/pages/Legal/Legal.scss
@@ -21,6 +21,7 @@ $background-color_1: white;
 	align-items: center;
     text-align: justify;
 	justify-content: center;
+    cursor: default;
     h1 {
         margin-top: 0;
     }
