--- a/star-wars-blog/src/sharedStyles/Auth.scss
+++ b/star-wars-blog/src/sharedStyles/Auth.scss
@@ -23,6 +23,7 @@ $background-color_2: transparent;
 	h1 {
 		margin-top: 50px;
 		margin-bottom: 90px;
+		cursor: default;
 	}
 }
 .unvalid-password-text {
