Adaptation des styles SCSS aux modifications légères effectuées dans la page "Category".

--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -16,7 +16,7 @@ $background-color_1: black;
 	margin-left: auto;
 	margin-right: auto;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: baseline;
 	align-items: center;
 	position: relative;
