--- a/star-wars-blog/src/pages/MoviesPage/MoviesPage.scss
+++ b/star-wars-blog/src/pages/MoviesPage/MoviesPage.scss
@@ -1,23 +1,254 @@
 $color_1: white;
+$color_2: rgb(53, 155, 155);
 $background-color_1: black;
+$background-color_2: #303030;
+$background-color_3: rgba(0, 0, 0, 0.2);
 $font-family_1: Arial, Helvetica, sans-serif;
+$font-family_2: 'Starjedi';
 
 
 .movies-page-wrapper {
     border: 1px solid $color_1;
     color: $color_1;
 	width: calc(80% - 2px);
+    min-height: 1000px;
+    height: 1050px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: $background-color_1;
-    cursor: default;
-    h2 {
+    background: url(../../assets/images/movies.webp) no-repeat center center;
+    background-size: cover;
+    .movies-page-title {
+        text-transform: lowercase;
+        cursor: default;
+        font-family: $font-family_2;
 		margin-top: 50px;
 	}
-    .movies-page-content {
-        text-align: justify;
-        font-family: $font-family_1;
-        width: 90%;
+    .movies-media-navbar {
+        width: 100%;
+        height: 40px;
+        background-color: $background-color_1;
+        display: flex;
+        font-family: $font-family_2;
+        font-size: 18px;
+        .div-movies, .div-series {
+            width: 50%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            outline: 1px solid $color_1;
+            color: $color_1;
+        }
+        .isActiveMovies, .isActiveSeries {
+            color: $color_2;
+        }
     }
+    .movies-page-content {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        position: relative;
+        .movies-page-media-listing {
+            border-top: 1px solid $color_1;
+            border-right: 1px solid $color_1;
+            border-top-right-radius: 10px;
+            overflow: hidden;
+            background-color: black;
+            width: fit-content;
+            min-width: 70px;
+            height: 100%;
+            position: absolute;
+            z-index: 2;
+            .movies-page-media-listing-image-wrapper {
+                width: 100%;
+                margin-top: 20px;
+                margin-bottom: 30px;
+                display: flex;
+                justify-content: flex-end;
+                img {
+                    border-radius: 50%;
+                    margin-right: 10px;
+                    width: 50px;
+                    height: 50px;
+                    cursor: pointer;
+                    &:active {
+                        outline: 2px solid $color_1;
+                    }
+                }
+            }
+            .movies-page-media-listing-image-bottom {
+                position: absolute;
+                bottom: -10px;
+            }
+            .movies-page-media-listing-content {
+                overflow: hidden;
+                color: $color_1;
+                text-align: justify;
+                padding-left: 50px;
+                font-family: $font-family_1;
+                font-size: 22px;
+                margin-left: 0;
+                list-style-type: none;
+                .media-listing-title {
+                    cursor: pointer;
+                    font-weight: bold;
+                    margin-bottom: 30px;
+                    width: fit-content;
+                    &:hover {
+                        color: $color_2;
+                    }
+                }
+            }
+            .listing-content-open {
+                transition: visibility 600ms, opacity 600ms ease-in;
+                opacity: 1;
+                visibility: visible;
+            }
+            .listing-content-close {
+                transition: visibility 100ms, opacity 100ms ease-out;
+                opacity: 0;
+                visibility: collapse;
+            }
+        }
+        .listing-open {
+            transition: max-width ease-in 300ms;
+            max-width: 42%;
+            width: 42%;
+        }
+        .listing-close {
+            transition: max-width ease-out 300ms;
+            max-width: 70px;
+        }
+        .movies-page-data-section {
+            background: 
+                linear-gradient(to left, transparent, black 95%, transparent),
+                linear-gradient(to top, transparent, black 95%, transparent);
+            border-radius: 20px;
+            position: absolute;
+            top: 100px;
+            left: 15%;
+            z-index: 1;
+            width: 70%;
+            height: 560px;
+            display: flex;
+            cursor: default;
+            animation: fadein 1s;
+            .movies-page-data-section-text-wrapper {
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: center;
+                .movies-page-data-section-title {
+                    text-transform: lowercase;
+                    margin-top: 40px;
+                    font-family: $font-family_2;
+                    color: $color_1;
+                    text-align: center;
+                    max-width: 600px;
+                }
+                .movies-page-data-section-release-date {
+                    width: 100%;
+                    text-align: center;
+                    font-family: $font-family_1;
+                }
+                .movies-page-data-section-text-content {
+                    margin-top: 20px;
+                    padding: 20px;
+                    padding-right: 20px;
+                    font-family: $font-family_1;
+                    color: $color_1;
+                    text-align: justify;
+                    width: 75%;
+                    max-height: 180px;
+                    overflow-y: scroll;
+                    line-height: 2;
+                }
+                .movies-page-data-section-trailer {
+                    position: absolute;
+                    bottom: 75px;
+                }
+                .movies-page-data-section-link {
+                    position: absolute;
+                    font-family: $font-family_1;
+                    color: $color_1;
+                    bottom: 50px;
+                }
+            }
+            .movies-page-data-section-image-actors-creators-wrapper {
+                .movies-page-data-section-image-wrapper {
+                    border-radius: 4px;
+                    display: flex;
+                    justify-content: center;
+                    width: fit-content;
+                    height: fit-content;
+                    margin-top: 40px;
+                    margin-right: 40px;
+                    outline: 1px solid $color_1;
+                    .movie-page-data-section-image {
+                        width: 193px;
+                        height: 290px;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                }
+                .movies-page-data-section-actors-creators {
+                    width: auto;
+                    padding: 5px;
+                    margin-top: 15px;
+                    margin-right: 40px;
+                    border-radius: 5px;
+                    font-family: $font-family_1;
+                    text-align: justify;
+                    background-color: $background-color_3;
+                    font-size: 14px;
+                    .movies-page-data-section-actors-creators-title {
+                        height: fit-content;
+                        padding: 0;
+                        margin-bottom: 8px;
+                        margin-top: 0;
+                        font-size: 14px;
+                    }
+                    .actors-section {
+                        margin-top: 15px;
+                    }
+                    .movies-page-data-section-crew {
+                        margin-left: 10px;
+                        margin-top: 0;
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }
+        .movies-page-data-section-alternate-text-section {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .movies-page-data-section-alternate-text {
+                cursor: default;
+                max-width: 460px;
+                margin-top: 100px;
+                font-family: $font-family_1;
+		        font-size: 28px;
+            }
+            .alternate-text-to-right {
+                transition: transform ease-out 300ms;
+                transform: translate(32%);
+            }
+            .alternate-text-to-center {
+                transition: transform ease-out 300ms;
+                transform: translate(0);
+            }
+        }
+    }
+}
+
+@keyframes fadein {
+	0% {opacity: 0}
+    100% {opacity: 1}
 }
